--- a/src/mainFrame.form
+++ b/src/mainFrame.form
@@ -95,7 +95,7 @@
           </grid>
         </children>
       </grid>
-      <component id="9db33" class="javax.swing.JSpinner" binding="spinner1" default-binding="true">
+      <component id="9db33" class="javax.swing.JSpinner" binding="numberOfPeople">
         <constraints>
           <grid row="5" column="3" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
