--- a/src/settingsFrame.form
+++ b/src/settingsFrame.form
@@ -94,6 +94,8 @@
           <grid row="3" column="5" row-span="3" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5658199"/>
+          <foreground color="-1"/>
           <text value="Previous"/>
         </properties>
       </component>
@@ -102,6 +104,9 @@
           <grid row="3" column="8" row-span="3" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5658199"/>
+          <foreground color="-1"/>
+          <hideActionText value="true"/>
           <text value="Next"/>
         </properties>
       </component>
@@ -110,6 +115,7 @@
           <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-327681"/>
           <text value="SONG:"/>
         </properties>
       </component>
@@ -118,6 +124,7 @@
           <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Star Wars"/>
         </properties>
       </component>
@@ -126,6 +133,9 @@
           <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5658199"/>
+          <foreground color="-1"/>
+          <hideActionText value="true"/>
           <text value="Shuffle"/>
         </properties>
       </component>
