--- a/src/ProfileFrame.form
+++ b/src/ProfileFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ProfileFrame">
-  <grid id="27dc6" binding="userPanel" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="userPanel" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -21,30 +21,12 @@
       </component>
       <component id="21055" class="javax.swing.JButton" binding="backButton" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12827836"/>
           <foreground color="-16721409"/>
           <text value="Back"/>
-        </properties>
-      </component>
-      <component id="653c3" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-256"/>
-          <text value="Username:"/>
-        </properties>
-      </component>
-      <component id="8a521" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-16721409"/>
-          <text value="4D"/>
         </properties>
       </component>
       <hspacer id="f7961">
@@ -65,6 +47,96 @@
           <background color="-12827836"/>
           <icon value="newprofile.jpeg"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="5b599" class="javax.swing.JLabel" binding="nameLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-256"/>
+          <text value="Name:"/>
+        </properties>
+      </component>
+      <component id="68562" class="javax.swing.JLabel" binding="familyLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-256"/>
+          <text value="Family Name:"/>
+        </properties>
+      </component>
+      <component id="97f7c" class="javax.swing.JLabel" binding="family">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16721409"/>
+          <text value="Label"/>
+        </properties>
+      </component>
+      <component id="4c2ea" class="javax.swing.JLabel" binding="genderLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-256"/>
+          <text value="Gender:"/>
+        </properties>
+      </component>
+      <component id="99349" class="javax.swing.JLabel" binding="gender">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16721409"/>
+          <text value="Label"/>
+        </properties>
+      </component>
+      <component id="4fe94" class="javax.swing.JLabel" binding="emailLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-256"/>
+          <text value="Email:"/>
+        </properties>
+      </component>
+      <component id="70edc" class="javax.swing.JLabel" binding="email">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16721409"/>
+          <text value="Label"/>
+        </properties>
+      </component>
+      <component id="21c72" class="javax.swing.JLabel" binding="countryLabel">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-256"/>
+          <text value="Country:"/>
+        </properties>
+      </component>
+      <component id="fe8bb" class="javax.swing.JLabel" binding="country">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16721409"/>
+          <text value="Label"/>
+        </properties>
+      </component>
+      <component id="79b35" class="javax.swing.JLabel" binding="first">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16721409"/>
+          <text value="Label"/>
         </properties>
       </component>
     </children>
