--- a/src/mainFrame.form
+++ b/src/mainFrame.form
@@ -149,7 +149,16 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="900b6" class="javax.swing.JLabel" binding="statsSlider">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Stats go here!"/>
+            </properties>
+          </component>
+        </children>
       </grid>
       <component id="73bdb" class="javax.swing.JLabel">
         <constraints>
