--- a/src/mainFrame.form
+++ b/src/mainFrame.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="mainFrame">
-  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="10" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="11" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="944" height="653"/>
+      <xy x="20" y="20" width="970" height="678"/>
     </constraints>
     <properties>
       <background color="-12827836"/>
@@ -23,7 +23,7 @@
       </component>
       <component id="1dcb0" class="javax.swing.JButton" binding="profile">
         <constraints>
-          <grid row="0" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="9" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12827836"/>
@@ -40,7 +40,7 @@
       </hspacer>
       <component id="86b2" class="javax.swing.JFormattedTextField" binding="blacklineFormattedTextField" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="11" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -51,7 +51,7 @@
       </component>
       <component id="98482" class="javax.swing.JLabel">
         <constraints>
-          <grid row="5" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <foreground color="-256"/>
@@ -60,7 +60,7 @@
       </component>
       <component id="61603" class="javax.swing.JButton" binding="previous">
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12827836"/>
@@ -70,13 +70,13 @@
       </component>
       <component id="9db33" class="javax.swing.JSpinner" binding="numberOfPeople">
         <constraints>
-          <grid row="5" column="3" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="3" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
       <component id="1e76f" class="javax.swing.JFormattedTextField" default-binding="true">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="0" row-span="1" col-span="11" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -99,16 +99,7 @@
       </component>
       <component id="ddaa0" class="javax.swing.JLabel" binding="soundLabel">
         <constraints>
-          <grid row="3" column="0" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-16721409"/>
-          <text value="Off"/>
-        </properties>
-      </component>
-      <component id="a6a4" class="javax.swing.JLabel" binding="lightLabel">
-        <constraints>
-          <grid row="3" column="3" row-span="2" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="3" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <foreground color="-16721409"/>
@@ -117,23 +108,12 @@
       </component>
       <component id="e8117" class="javax.swing.JToggleButton" binding="toggleLight">
         <constraints>
-          <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12827836"/>
           <foreground color="-12827836"/>
           <icon value="lightsNew.jpeg"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="87ccd" class="javax.swing.JButton" binding="next">
-        <constraints>
-          <grid row="9" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12827836"/>
-          <icon value="Facebook Post 940x788 px (7).jpeg"/>
-          <selectedIcon value="right.jpeg"/>
           <text value=""/>
         </properties>
       </component>
@@ -145,17 +125,21 @@
       <grid id="e9cda" binding="statsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="1" row-span="1" col-span="8" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13091008"/>
+          <foreground color="-16721409"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="900b6" class="javax.swing.JLabel" binding="statsSlider">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Stats go here!"/>
+              <foreground color="-16721409"/>
+              <text value="Click next to show info"/>
             </properties>
           </component>
         </children>
@@ -171,18 +155,32 @@
       </component>
       <component id="9a6cf" class="javax.swing.JButton" binding="Histogram">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Click here to display info about  your postion in the room"/>
+          <background color="-13091008"/>
+          <foreground color="-256"/>
+          <text value="Your Zone Info"/>
         </properties>
       </component>
-      <component id="62314" class="javax.swing.JButton" binding="xyplot">
+      <component id="a6a4" class="javax.swing.JLabel" binding="lightLabel">
         <constraints>
-          <grid row="8" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="9" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Click here to display info about savings"/>
+          <foreground color="-16721409"/>
+          <text value="Off"/>
+        </properties>
+      </component>
+      <component id="87ccd" class="javax.swing.JButton" binding="next">
+        <constraints>
+          <grid row="10" column="9" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12827836"/>
+          <icon value="Facebook Post 940x788 px (7).jpeg"/>
+          <selectedIcon value="right.jpeg"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
